--- a/app.css
+++ b/app.css
@@ -21,8 +21,6 @@
     display: flex;
 }
 
-div {}
-
 .pbox {
     width: 50%;
     padding: 4rem;
@@ -51,13 +49,13 @@ span {
 }
 
 .pbox-inner2 {
-    font-size: 0.9rem;
+    width: 90%;
+    font-size: 0.8rem;
     color: hsla(0, 0%, 100%, 0.75);
     font-family: 'Inter', sans-serif;
     margin-top: 1.5rem;
     line-height: 25px;
     font-weight: 100;
-    letter-spacing: 1px;
 }
 
 .pbox-inner3 {
@@ -66,6 +64,7 @@ span {
 }
 
 .pbox-3 {
+    width: 85%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
