--- a/app.css
+++ b/app.css
@@ -19,6 +19,7 @@
     height: 24rem;
     border-radius: 0.5rem;
     display: flex;
+    overflow: hidden;
 }
 
 .pbox {
@@ -38,7 +39,7 @@
 .pbox-inner1 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: white;
     text-align: left;
 }
@@ -49,27 +50,71 @@ span {
 
 .pbox-inner2 {
     width: 90%;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     color: hsla(0, 0%, 100%, 0.75);
     font-family: 'Inter', sans-serif;
     margin-top: 1.5rem;
-    line-height: 25px;
+    line-height: 21px;
     font-weight: 100;
 }
 
 .pbox-inner3 {
-    border: 1px solid white;
     color: hsla(0, 0%, 100%, 0.75);
 }
 
 .pbox-3 {
     width: 85%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     color: aliceblue;
     font-family: 'Inter', sans-serif;
 }
 
-/* font-family: 'Inter', sans-serif; */
-/* font-family: 'Lexend Deca', sans-serif; */
+/* responsive */
+@media (max-width:376px) {
+    .outer {
+        overflow-y: scroll;
+    }
+
+    .container {
+        width: 85%;
+        height: auto;
+        flex-direction: column;
+    }
+
+    .pbox {
+        width: 100%;
+        padding: 1.4rem;
+        align-items: center;
+    }
+
+    .pbox-inner1 {
+        text-align: center;
+        margin: 1.8rem 0 1.8rem 0;
+        font-size: 1.7rem;
+    }
+
+    .pbox-inner2 {
+        text-align: center;
+        font-size: 0.9rem;
+        margin: 1rem auto;
+    }
+
+    .pbox-3 {
+        margin: 1.8rem;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .pbox3-1 {
+        margin-bottom: 1rem;
+    }
+
+    .pbox3-2 {
+        margin-bottom: 1rem;
+    }
+
+    .pbox3-3 {
+        margin-bottom: 1rem;
+    }
+}
